# Fitness

./: README.md
fitness_tracker/: README.md  db.sqlite3  pyproject.toml  settings.py
fitness_tracker/fitness_tracker/: settings.py  urls.py
fitness_tracker/tracker/: admin.py  models.py  serializers.py  urls.py  views.py
fitness_tracker/tracker/migrations/: 0001_initial.py
tracker/: admin.py  serializers.py  tests.py
